--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@nuxt/ui": "^4.0.0-alpha.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.5",
+    "date-fns": "^4.1.0",
+    "@unovis/vue": "^1.5.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -31,5 +34,8 @@
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
+  },
+  "resolutions": {
+    "unimport": "4.1.1"
   }
 }
